[package]
name = "ami-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "0.15.0" }
aws-sdk-ssm = { version = "0.15.0" }
aws-types = { version = "0.15.0" }
clap = { version = "3.2.8" }
futures-util = { version = "0.3.21" }
once_cell = { version = "1.13.0" }
regex = { version = "1.6.0" }
tokio = { version = "1.19.2", features = ["full"] }
